--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-white">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-white ">
+    <div class="container-fluid w-75 m-auto">
       <a class="navbar-brand text-dark" href="#"><i class="fas fa-spa fa-3x text-success" id="logo"></i></a>
       <button class="navbar-toggler rounded-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon bg-light border"></span>
@@ -49,13 +49,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
+      <img src="/img/slide-bg-003.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item ">
       <img src="/img/slide-bg-001.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item carousel-01">
       <img src="/img/slide-bg-002.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="/img/slide-bg-003.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
@@ -68,76 +68,32 @@
   </button> -->
 </div>
 
-<div class="row row-cols-1 row-cols-md-4 w-50 m-auto p-3 mt-5 mb-3 text-center m-5 align-middle">
-    <div class="col">
-      <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 fw-normal">Free</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li>10 users included</li>
-          <li>2 GB of storage</li>
-          <li>Email support</li>
-          <li>Help center access</li>
-        </ul>
-        <button type="button" class="w-100 btn btn-lg btn-outline-success">Sign up for free</button>
+<div class="row row-cols-1 row-cols-md-4 w-100 m-auto row-cols-lg-4 w-50 m-auto p-3 mt-5 mb-3 text-center m-5 align-middle justify-content-center">
+    <div class="col col-lg-2">
+      <div class="card mb-4 shadow-sm rounded-0">
+        <img src="/img/plant-001.png">
+        <button type="button" class="w-100 btn btn-lg btn-outline-success rounded-0">Plant 001</button>
       </div>
     </div>
-    </div>
-    <div class="col">
-      <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 fw-normal">Pro</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li>20 users included</li>
-          <li>10 GB of storage</li>
-          <li>Priority email support</li>
-          <li>Help center access</li>
-        </ul>
-        <button type="button" class="w-100 btn btn-lg btn-success">Get started</button>
+    <div class="col col-lg-2">
+      <div class="card mb-4 shadow-sm rounded-0">
+        <img src="/img/plant-002.png">
+         <button type="button" class="w-100 btn btn-lg btn-success rounded-0">Plant 002</button>
       </div>
     </div>
-    </div>
-    <div class="col">
-      <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 fw-normal">Enterprise</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li>30 users included</li>
-          <li>15 GB of storage</li>
-          <li>Phone and email support</li>
-          <li>Help center access</li>
-        </ul>
-        <button type="button" class="w-100 btn btn-lg btn-success">Contact us</button>
+    <div class="col col-lg-2">
+      <div class="card mb-4 shadow-sm rounded-0">
+        <img src="/img/plant-003.png">
+         <button type="button" class="w-100 btn btn-lg btn-success rounded-0">Plant 003</button>
       </div>
     </div>
-    </div>
-    <div class="col">
-      <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 fw-normal">Enterprise</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li>30 users included</li>
-          <li>15 GB of storage</li>
-          <li>Phone and email support</li>
-          <li>Help center access</li>
-        </ul>
-        <button type="button" class="w-100 btn btn-lg btn-success">Contact us</button>
+    <div class="col col-lg-2">
+      <div class="card mb-4 shadow-sm rounded-0">
+        <img src="/img/plant-004.png">
+         <button type="button" class="w-100 btn btn-lg btn-success rounded-0">Plant 004</button>
       </div>
     </div>
   </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/script.js"></script>
